--- a/Index.html
+++ b/Index.html
@@ -512,35 +512,46 @@
     }
 
     function drawReport(r){
-      const k = r.kpi;
       const kpiEl = byId('rep_kpi');
+      const tblM = byId('rep_tbl_method');
+      const tblCI = byId('rep_tbl_cat_income');
+      const tblCE = byId('rep_tbl_cat_expense');
+      const tblDoc = byId('rep_tbl_doc');
+      const tblSup = byId('rep_tbl_suppliers');
+      const tblClose = byId('rep_tbl_closings');
+      const recent = byId('rep_recent_rows');
+      if(!r || !r.kpi){
+        kpiEl.innerHTML = '';
+        tblM.innerHTML = '';
+        tblCI.innerHTML = '';
+        tblCE.innerHTML = '';
+        tblDoc.innerHTML = '';
+        tblSup.innerHTML = '';
+        tblClose.innerHTML = '';
+        recent.innerHTML = '';
+        alert('Няма данни за справка');
+        return;
+      }
+      const k = r.kpi;
       kpiEl.innerHTML = [
         {label:'Общ приход',v:k.income_total},
         {label:'Общ разход',v:k.expense_total},
         {label:'Нето',v:k.net},
         {label:'Брой операции',v:k.tx_count}
       ].map(p=>`<div class="card"><div class="stat"><span>${p.label}:</span><span class="v">${money(p.v)}</span></div></div>`).join('');
-
-      const tblM = byId('rep_tbl_method');
       const methods = Object.keys(r.byMethod.income);
       tblM.innerHTML = '<tr><th>Метод</th><th>Приход</th><th>Разход</th></tr>' + methods.map(m=>`<tr><td>${m}</td><td>${money(r.byMethod.income[m])}</td><td>${money(r.byMethod.expense[m])}</td></tr>`).join('');
 
-      const tblCI = byId('rep_tbl_cat_income');
       tblCI.innerHTML = '<tr><th>Категория</th><th>Сума</th></tr>' + r.byCategory.income.map(c=>`<tr><td>${c.category}</td><td>${money(c.amount)}</td></tr>`).join('');
-      const tblCE = byId('rep_tbl_cat_expense');
       tblCE.innerHTML = '<tr><th>Категория</th><th>Сума</th></tr>' + r.byCategory.expense.map(c=>`<tr><td>${c.category}</td><td>${money(c.amount)}</td></tr>`).join('');
 
-      const tblDoc = byId('rep_tbl_doc');
       tblDoc.innerHTML = '<tr><th>Тип документ</th><th>Сума</th><th>Брой</th></tr>' + r.expenseByDocType.map(d=>`<tr><td>${DOC_LABEL[d.doc_type]||d.doc_type}</td><td>${money(d.amount)}</td><td>${d.count}</td></tr>`).join('');
 
-      const tblSup = byId('rep_tbl_suppliers');
       tblSup.innerHTML = '<tr><th>Доставчик</th><th>Сума</th><th>Брой</th></tr>' + r.suppliersTop.map(s=>`<tr><td>${s.supplier}</td><td>${money(s.amount)}</td><td>${s.count}</td></tr>`).join('');
 
-      const tblClose = byId('rep_tbl_closings');
       tblClose.innerHTML = '<tr><th>Дата</th><th>Магазин</th><th>Прод. каса</th><th>Прод. карта</th><th>Прод. банка</th><th>Разх. каса</th><th>Разх. карта</th><th>Разх. банка</th><th>Декл. каса</th><th>Очакв. каса</th><th>Разлика</th></tr>' +
         r.closings.map(c=>`<tr><td>${c.date}</td><td>${c.store}</td><td>${money(c.sales_cash)}</td><td>${money(c.sales_card)}</td><td>${money(c.sales_bank)}</td><td>${money(c.expenses_cash)}</td><td>${money(c.expenses_card)}</td><td>${money(c.expenses_bank)}</td><td>${money(c.declared_cash)}</td><td>${money(c.expected_cash)}</td><td>${money(c.diff)}</td></tr>`).join('');
 
-      const recent = byId('rep_recent_rows');
       recent.innerHTML = r.recentTx.map(t=>`<tr>
         <td>${new Date(t.timestamp).toLocaleTimeString()}</td>
         <td>${t.date}</td>
