Add date range filter for recent transactions

--- a/Index.html
+++ b/Index.html
@@ -154,6 +154,19 @@
       <div class="row" style="margin-top:12px">
         <div class="card" style="grid-column: span 12">
           <h3>Последни операции</h3>
+          <div class="grid3" style="margin-bottom:8px">
+            <div>
+              <label>От дата</label>
+              <input type="date" id="tx_from" />
+            </div>
+            <div>
+              <label>До дата</label>
+              <input type="date" id="tx_to" />
+            </div>
+            <div style="display:flex;align-items:flex-end;justify-content:flex-end">
+              <button class="btn" onclick="refreshTx()">Филтър</button>
+            </div>
+          </div>
           <table>
             <thead>
               <tr>
@@ -395,6 +408,8 @@
       m.innerHTML = META.methods.map(v=>`<option value="${v}">${v}</option>`).join('');
       refillCategories();
       byId('date').value = today();
+      byId('tx_from').value = today();
+      byId('tx_to').value = today();
       fillDenoms();
       fillDocTypes();
       loadSuppliers();
@@ -498,7 +513,14 @@
       const d = byId('date').value;
       const s = byId('store').value;
       google.script.run.withSuccessHandler(drawSummary).getDailySummary(d, s);
-      const q = {dateFrom:d, dateTo:d, store:s, limit:200};
+      refreshTx();
+    }
+
+    function refreshTx(){
+      const df = byId('tx_from').value || byId('date').value;
+      const dt = byId('tx_to').value || byId('date').value;
+      const s = byId('store').value;
+      const q = {dateFrom: df, dateTo: dt, store: s, limit: 200};
       google.script.run.withSuccessHandler(drawTx).listTransactions(q);
     }
 
