--- a/Landing.html
+++ b/Landing.html
@@ -339,11 +339,38 @@
         if (isValid) {
           loginBtn.textContent = 'Вход...';
           loginBtn.disabled = true;
+
+          const storeToken = (token, user) => {
+            const data = JSON.stringify(user || {});
+            const getStorage = (name) => {
+              try { return window[name]; } catch (err) { return null; }
+            };
+            const trySet = (storage) => {
+              if (!storage) return false;
+              try {
+                storage.setItem('token', token);
+                storage.setItem('user', data);
+                return true;
+              } catch (err) {
+                return false;
+              }
+            };
+            return trySet(getStorage('localStorage')) || trySet(getStorage('sessionStorage'));
+          };
+
           google.script.run
             .withSuccessHandler(res => {
-              localStorage.setItem('token', res.token);
-              localStorage.setItem('user', JSON.stringify(res.user || {}));
-              window.location.href = '?page=admin';
+              const token = res.token;
+              const user = res.user || {};
+              const stored = storeToken(token, user);
+              const nextUrl = new URL(window.location.href);
+              nextUrl.searchParams.set('page', 'admin');
+              if (!stored) {
+                nextUrl.searchParams.set('token', token);
+              } else {
+                nextUrl.searchParams.delete('token');
+              }
+              window.location.href = nextUrl.toString();
             })
             .withFailureHandler(err => {
               alert(err.message || err);
@@ -355,7 +382,13 @@
       });
       // Бутон за админ панел
       adminBtn.addEventListener('click', function() {
-        const token = localStorage.getItem('token');
+        let token = null;
+        try {
+          token = window.localStorage.getItem('token');
+        } catch (err) {}
+        if (!token) {
+          try { token = window.sessionStorage.getItem('token'); } catch (err) {}
+        }
         if (!token) {
           alert('Моля, влез първо.');
           return;
