--- a/Index.html
+++ b/Index.html
@@ -324,6 +324,29 @@
   </div>
 
   <script>
+    console.log('Index.html loaded');
+    console.log('URL params:', new URLSearchParams(window.location.search).toString());
+
+    if (window.top === window.self) {
+      console.log('Running in top window');
+    } else {
+      console.log('Running in iframe');
+    }
+
+    function checkAuth() {
+      const urlParams = new URLSearchParams(window.location.search);
+      const token = urlParams.get('token') || localStorage.getItem('token') || sessionStorage.getItem('token');
+
+      if (!token) {
+        console.log('No token found, redirecting to landing');
+        window.location.href = '?page=landing';
+        return false;
+      }
+
+      console.log('Token found, proceeding');
+      return true;
+    }
+
     let META = null;
 
     const DOC_TYPES = [
@@ -657,6 +680,10 @@
     }
 
     window.addEventListener('load', function(){
+      if (!checkAuth()) {
+        return;
+      }
+
       setAllDatesToToday();
       google.script.run.withSuccessHandler(fillMeta).getMeta();
     });
