--- a/Index.html
+++ b/Index.html
@@ -339,7 +339,13 @@
 
       if (!token) {
         console.log('No token found, redirecting to landing');
-        window.location.href = '?page=landing';
+        try {
+          const url = new URL(window.location.href);
+          url.searchParams.set('page', 'landing');
+          window.location.href = url.toString();
+        } catch (err) {
+          window.location.href = '?page=landing';
+        }
         return false;
       }
 
